# wiwwiam-shakespeawe

./: README.md  index.md
awws-weww-that-ends-w-weww/: a1s1.md  a1s1.uwu.md  a1s2.md  a1s3.md  a1s3.uwu.md  index.md
awws-weww-that-ends-w-weww/act1/: a1s1.md  a1s1.uwu.md  a1s2.md  a1s2.uwu.md  a1s3.md  a1s3.uwu.md
awws-weww-that-ends-w-weww/act2/: a2s1.md  a2s1.uwu.md  a2s2.md  a2s2.uwu.md  a2s3.md  a2s3.uwu.md  a2s4.md  a2s4.uwu.md
awws-weww-that-ends-w-weww/act3/: a3s1.md  a3s1.uwu.md  a3s2.md  a3s2.uwu.md  a3s3.md  a3s4.md  a3s4.uwu.md  a3s5.md  a3s6.md  a3s6.uwu.md  a3s7.md  s3s7.uwu.md
awws-weww-that-ends-w-weww/act4/: a4s1.md  a4s2.md  a4s2.uwu.md  a4s4.md  a4s5.md
awws-weww-that-ends-w-weww/act5/: a5s1.uwu.md  a5s3.md  a5s3.uwu.md
books/as-you-wike-it/act1/: a1s2.md
books/as-you-wike-it/act2/: a2s2.uwu.md  a2s3.md  a2s4.md  a2s4.uwu.md  a2s5.uwu.md  a2s6.uwu.md
books/as-you-wike-it/act3/: a3s1.md  a3s3.md
books/as-you-wike-it/act4/: a4s2.md  a4s2.uwu.md  a4s3.md  a4s3.uwu.md
books/as-you-wike-it/act5/: a5s1.md  a5s1.uwu.md  a5s3.uwu.md  a5s4.uwu.md
books/awws-weww-that-ends-w-weww/: index.md
books/awws-weww-that-ends-w-weww/act1/: a1s1.md
books/awws-weww-that-ends-w-weww/act2/: a2s1.uwu.md
books/awws-weww-that-ends-w-weww/act3/: a3s3.uwu.md  a3s5.md
books/awws-weww-that-ends-w-weww/act4/: a4s1.uwu.md  a4s3.md
books/awws-weww-that-ends-w-weww/act5/: a5s1.md
docs/: _config.yml  index.md
docs/as-you-wike-it/: index.md
docs/the-comedy-of-ewwows/: index.md
shakespeawe/: Cargo.toml
shakespeawe/src/: main.rs
(+62 files in other folders)
