[package]
name = "shakespeawe"
version = "0.1.0"
authors = ["Ryan Brink <ryanbrink@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
select = "0.5.0"
string-builder = "0.2.0"
prettytable-rs = "0.8.0"